moved folder and files

--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -4,7 +4,7 @@
 
 		<div class="container">
 			<div class="row">
-			<div class="col footer">
+			<div class="col footer no-padding">
 				<div class="header">
 					<p>&copy; Aaron Fernandes</p>
 				</div>
