--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -31,7 +31,7 @@
 
 		<div class="container">
 			<div class="row">
-			<div class="col-4">
+			<div class="col-4 no-padding">
 				<ul class="sidemenu">
 					<li class="nav-header"><b>HEADER</b></li>
 					<li ><a href="/">Home</a></li>
