--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -16,18 +16,15 @@
 }
 
 body{
-  padding: .5%;
   background-color: rgb(0, 0, 132);
   font-family: MainFont, sans-serif;
 }
 
 
 .header{
-  width: 100%;
   background-color: #00AAAA;
   color: #fff;
   display: block;
-  padding: 1%;
 }
 
 .pull-right{
@@ -43,12 +40,17 @@ body{
   margin: 0;
 }
 
+.no-padding{
+  padding: 0px;
+}
+
 .sidemenu{
   display: block;
   width: 100%;
   background-color: #BBBBBB;
   color: #0A0101;
   border: 1px solid #0A0101;
+  margin: 0px;
   margin-top: .3em;
   padding: .2em;
   padding-left: .5em;
