--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -35,6 +35,8 @@
 				<ul class="sidemenu">
 					<li class="nav-header"><b>HEADER</b></li>
 					<li ><a href="/">Home</a></li>
+					<li><a href="/login">Login</a></li>
+					<li><a href="/businessList">businessList</a></li>
 					<li><a href="/projects">Projects</a></li>
 					<li><a href="/services">Services</a></li>
 					<li><a href="/contact">Contact</a></li>
