--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -1,7 +1,9 @@
-<%- include ./partials/header.ejs %>
+<%- include ../partials/header.ejs %>
 
 <h1>Login to view the secreat area</h1>
-
+<p>
+	<%= messages %>
+</p>
 <form  method="POST">
 	<div class="form-group">
 		<label for="username">Username</label>
@@ -16,4 +18,4 @@
 	</div>
 </form>
 
-<%- include ./partials/footer.ejs %>
+<%- include ../partials/footer.ejs %>
