--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -1,31 +1,43 @@
-<%- include ./partials/header.ejs %>
+<%- include ../partials/header.ejs %>
 
 <h1>Create a new Account</h1>
 
-<form method="POST">
-	<div class="form-group">
-		<label class="col-sm-2 control-label" for="username">Username</label>
-		<input type="text" id="username" name="username" required>
-	</div>
-	<div class="form-group">
-		<label class="col-sm-2 control-label" for="password">Password</label>
-		<input type="password" id="password" name="password" required>
-	</div>
-	<div class="form-group">
-		<label class="col-sm-2 control-label" for="passwordVerify">Verify Password</label>
-		<input type="password" id="passwordVerify" required>
-	</div>
-		<div class="form-group">
-		<label class="col-sm-2 control-label" for="email">Email</label>
-		<input type="email" id="email" name="email" required>
-	</div>
-		<div class="form-group">
-		<label class="col-sm-2 control-label" for="displayName">Name</label>
-		<input type="text" id="displayName" name="displayName" required>
-	</div>
-	<div class="form-group">
-		<input type="submit" value="Sign Up">
-	</div>
+<form class="form-horizontal" method="POST">
+  <div class="form-group">
+    <label for="username" class="col-sm-2 control-label">Username</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" name="username" placeholder="Username" required>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="password" class="col-sm-2 control-label">Password</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" name="password" placeholder="Password" required>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="passwordVerify" class="col-sm-5 control-label">password Verify</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" name="passwordVerify" placeholder="Password" required>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="email" class="col-sm-5 control-label">Email</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control" name="email" placeholder="Password" required>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="displayName" class="col-sm-5 control-label">Display Name</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" name="displayName" placeholder="Password" required>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Sign Up</button>
+    </div>
+  </div>
 </form>
 
-<%- include ./partials/footer.ejs %>
+<%- include ../partials/footer.ejs %>
