--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -14,7 +14,7 @@
 		<title>Aaron Fernandes | Profile</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-		<link href="stylesheets/style.css" rel="stylesheet" media="screen">
+		<link href="/stylesheets/style.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
 
