business add stuff

--- a/server/views/businessStuff/businessContactsList.ejs
+++ b/server/views/businessStuff/businessContactsList.ejs
@@ -34,6 +34,9 @@
 		<% } %>
 		</tbody>
 	</table>
+	<br>
+	<a class="btn btn-warning" href="businessList/add" role="button">Add New</a>
+	<br>
 	<% } else { %>
 		<p>No contacts avilable</p>
 	<% } %>
