--- a/server/views/businessStuff/businessListEdit.ejs
+++ b/server/views/businessStuff/businessListEdit.ejs
@@ -9,24 +9,40 @@
   <div class="form-group">
     <label for="name" class="col-sm-2 control-label">Name</label>
     <div class="col-sm-10">
+      <% if(typeof contact != 'undefined') { %>
       <input type="text" class="form-control" id="name" value="<%= contact.name %>" name="name">
+      <% } else { %>
+      <input type="text" class="form-control" id="name" value="" name="name">
+      <% } %>
     </div>
   </div>
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
     <div class="col-sm-10">
+      <% if(typeof contact != 'undefined') { %>
       <input type="email" class="form-control" id="inputEmail3" value="<%= contact.email %>" name="email">
+      <% } else { %>
+      <input type="email" class="form-control" id="inputEmail3" value="" name="email">
+      <% } %>
     </div>
   </div>
   <div class="form-group">
     <label for="number" class="col-sm-2 control-label">Number</label>
     <div class="col-sm-10">
+      <% if(typeof contact != 'undefined') { %>
       <input type="number" class="form-control" min="1000000000" max="9999999999" id="number" value="<%= contact.number %>" name="number">
+      <% } else { %>
+      <input type="number" class="form-control" min="1000000000" max="9999999999" id="number" value="" name="number">
+      <% } %>
     </div>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-6 col-sm-6">
+      <% if(typeof contact != 'undefined') { %>
       <button type="submit" class="btn btn-primary">Save</button>
+      <% } else { %>
+      <button type="submit" class="btn btn-primary">Add</button>
+      <% } %>
 			<a class="btn btn-warning" href="/businessList" role="button">Cancel</a>
     </div>
 
