--- a/server/views/businessStuff/businessContactsList.ejs
+++ b/server/views/businessStuff/businessContactsList.ejs
@@ -5,21 +5,11 @@
 		<tbody>
 			<thead>
 				<tr>
-					<th>
-						 Name
-					</th>
-					<th>
-						Email
-					</th>
-					<th>
-						Number
-					</th>
-					<th>
-						&nbsp;
-					</th>
-					<th>
-						&nbsp;
-					</th>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Number</th>
+					<th>&nbsp;</th>
+					<th>&nbsp;</th>
 				</tr>
 			</thead>
 		<% for(var i=0; i<contacts.length; i++) { %>
