--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -19,6 +19,9 @@
 	<div class="form-group">
 		<input type="submit" value="Login">
 	</div>
+	<div class="form-group">
+		<a class="btn btn-warning" href="/auth/github" role="button"><img width="2%" src="/images/auth/github.png"> Login With GitHub</a>
+	</div>
 </form>
 
 <%- include ../partials/footer.ejs %>
