removed debug code

--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -28,7 +28,7 @@
 					<% } %>
 					<h1 class="pull-left">Aaron Fernandes</h1>
 					<br><br>
-					<h2>A real UNIX admin <%= typeof displayName != 'undefined'%></h2>
+					<h2>A real UNIX admin</h2>
 				</div>
 			</div>
 		</div>
