added link for register

--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -20,6 +20,9 @@
 		<input type="submit" value="Login">
 	</div>
 	<div class="form-group">
+		Don't have an account create? <a href="/register" role="button">Create a new account</a>
+	</div>
+	<div class="form-group">
 		<a class="btn btn-warning" href="/auth/github" role="button"><img width="2%" src="/images/auth/github.png"> Login With GitHub</a>
 	</div>
 </form>
