--- a/server/views/contact.ejs
+++ b/server/views/contact.ejs
@@ -1,28 +1,57 @@
 <%- include ./partials/header.ejs %>
 
-<h1>Contact Me</h1>
+	<h1>Contact Me</h1>
 
-<div>
-<address>
-	127 Dot Zero Street,<br>
-	Toronto, ON,<br>
-	CA<br>
-</address>
-</div>
+	<div>
+		<address>
+			127 Dot Zero Street,<br> Toronto, ON,<br> CA
+			<br>
+		</address>
+	</div>
 
-<br>
-<h2>EMAIL: </h2>
-<p>Contact me via email:</p>
-
+	<br>
+	<h2>EMAIL: </h2>
+	<p>Contact me via email:</p>
 
 
-<%if (messageAvailable) { %>
-<div><%= message %></div>
+
+	<%if (messageAvailable) { %>
+		<div>
+			<%= message %>
+		</div>
 
 
-<% } else{ %>  
-<div id="contactform"></div>
-<% } %>
+		<% } else{ %>
+			<div id="contactform">
 
 
-<%- include ./partials/footer.ejs %>
+				<form class="form-horizontal" method="post">
+					<div class="form-group">
+						<label for="name" class="col-sm-2 control-label">Name</label>
+						<div class="col-sm-10">
+							<input type="text" class="form-control" name="name" id="name" placeholder="Name">
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+						<div class="col-sm-10">
+							<input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+						<div class="col-sm-10">
+							<textarea class="form-control" id="user_message" placeholder="message"></textarea>
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-sm-offset-2 col-sm-10">
+							<button type="submit" class="btn btn-primary">Submit</button>
+						</div>
+					</div>
+				</form>
+			</div>
+			<% } %>
+
+
+				<%- include ./partials/footer.ejs %>
